tests: Don't build autoptr test on Visual Studio
g_autoptr() is not supported on Visual Studio, since it is really a GCCism

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -5,11 +5,14 @@
 # Copyright (C) 2018 Grilo Project
 
 tests = [
-    'autoptr',
     'lib-net',
     'media',
     'registry',
 ]
+
+if cc.get_id() != 'msvc'
+  tests += 'autoptr'
+endif
 
 foreach t: tests
     source = t + '.c'
