build: Clarify LGPLv2.1 or later license
The COPYING file by itself isn't enough to know under which license the
project is released, as a combined work.

Clarify this in the build system and the README.

--- a/meson.build
+++ b/meson.build
@@ -12,7 +12,7 @@ project('grilo', 'c',
             'c_std=gnu99',
             'warning_level=1'
         ],
-        license: 'LGPL 2.1',
+        license: 'LGPL-2.1-or-later',
         meson_version: '>= 0.46.0')
 
 grilo_version = meson.project_version()
