build: Use copy argument for configure_file()
Since we're copying a file. The empty configuration_data() trick is not
necessary any more.

--- a/doc/grilo/meson.build
+++ b/doc/grilo/meson.build
@@ -5,9 +5,11 @@
 #
 # Copyright (C) 2016 Igalia S.L. All rights reserved.
 
-types = configure_file(input : 'grilo.types',
-  output : 'grilo.types',
-  configuration : configuration_data())
+types = configure_file(
+  input: 'grilo.types',
+  output: 'grilo.types',
+  copy: true,
+)
 
 private_headers = [
   'grl-sync-priv.h',
