build: Declare a variable for the internal grlnet dependency
When using grilo as a subproject we don't have access to the pkg-config
variables. This means any attempt at checking if grilo was built against
libsoup3 or libsoup2.4 will fail when using grilo as a subproject.

Fixes: 34d3c58 ("build: Allow building grilo as a Meson subproject")

--- a/libs/net/meson.build
+++ b/libs/net/meson.build
@@ -41,7 +41,8 @@ libgrlnet = shared_library('grlnet-@0@'.format(grl_majorminor),
 
 libgrlnet_dep = declare_dependency(link_with: libgrlnet,
     include_directories: [libgrl_inc, libgrlnet_inc],
-    dependencies: [libsoup_dep, libgrl_dep])
+    dependencies: [libsoup_dep, libgrl_dep],
+    variables: {'soupapiversion': soup_api_version})
 
 grlnet_pc = pkgconfig.generate(libgrlnet,
     filebase: 'grilo-net-@0@'.format(grl_majorminor),
