--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,16 @@
 image: fedora:latest
 
+include:
+  - component: "gitlab.gnome.org/GNOME/citemplates/release-service@master"
+    inputs:
+      job-stage: "release"
+      dist-job-name: "build-release-tarball"
+      tarball-artifact-path: "${TARBALL_ARTIFACT_PATH}"
+
+stages:
+  - "build"
+  - "release"
+
 variables:
   DEPENDENCIES: chrpath
                 vala
@@ -19,39 +30,58 @@ variables:
   SOUP2_DEPS: libsoup-devel
   SOUP3_DEPS: libsoup3-devel
   LAST_ABI_BREAK: 60d135ef64f16671bb0ab4079ecbc59bdc32cbc7
+  MESON_BUILD_DIR: "_build"
+  TARBALL_ARTIFACT_PATH: "${MESON_BUILD_DIR}/meson-dist/${CI_PROJECT_NAME}-${CI_COMMIT_TAG}.tar.xz"
 
-build_stable:
+build-stable:
+  stage: "build"
   before_script:
     - dnf update -y --nogpgcheck
     - dnf install -y --nogpgcheck $DEPENDENCIES $SOUP3_DEPS
   script:
-    - meson . _build --prefix=/usr
-    - ninja -C _build
-    - ninja -C _build install
-    - ninja -C _build test
+    - meson . "${MESON_BUILD_DIR}" --prefix=/usr
+    - ninja -C "${MESON_BUILD_DIR}"
+    - ninja -C "${MESON_BUILD_DIR}" install
+    - ninja -C "${MESON_BUILD_DIR}" test
 
-build_no_optional_libs:
+build-no-optional-libs:
+  stage: "build"
   before_script:
     - dnf update -y --nogpgcheck
     - dnf install -y --nogpgcheck $DEPENDENCIES $SOUP2_DEPS
   script:
-    - meson . _build --prefix=/usr -Denable-grl-net=true -Denable-grl-pls=true -Dsoup3=false
-    - ninja -C _build
-    - ninja -C _build install
-    - ninja -C _build test
+    - meson . "${MESON_BUILD_DIR}" --prefix=/usr -Denable-grl-net=true -Denable-grl-pls=true -Dsoup3=false
+    - ninja -C "${MESON_BUILD_DIR}"
+    - ninja -C "${MESON_BUILD_DIR}" install
+    - ninja -C "${MESON_BUILD_DIR}" test
     - curl https://gitlab.freedesktop.org/hadess/check-abi/-/raw/main/contrib/check-abi-fedora.sh | bash
     - check-abi --old-parameters="-Denable-grl-net=true -Denable-grl-pls=true" --new-parameters="-Denable-grl-net=true -Denable-grl-pls=true -Dsoup3=false" ${LAST_ABI_BREAK} $(git rev-parse HEAD)
 
-build_no_optional_libs_soup3:
+build-no-optional-libs-soup3:
+  stage: "build"
   before_script:
     - dnf update -y --nogpgcheck
     - dnf install -y --nogpgcheck $DEPENDENCIES $SOUP3_DEPS
   script:
-    - meson . _build --prefix=/usr -Denable-grl-net=true -Denable-grl-pls=true -Dsoup3=true
-    - ninja -C _build
-    - ninja -C _build install
-    - ninja -C _build test
+    - meson . "${MESON_BUILD_DIR}" --prefix=/usr -Denable-grl-net=true -Denable-grl-pls=true -Dsoup3=true
+    - ninja -C "${MESON_BUILD_DIR}"
+    - ninja -C "${MESON_BUILD_DIR}" install
+    - ninja -C "${MESON_BUILD_DIR}" test
     - curl https://gitlab.freedesktop.org/hadess/check-abi/-/raw/main/contrib/check-abi-fedora.sh | bash
     # For the soup2 build
     - dnf install -y --nogpgcheck $SOUP2_DEPS
     - check-abi --old-parameters="-Denable-grl-net=true -Denable-grl-pls=true" --new-parameters="-Denable-grl-net=true -Denable-grl-pls=true -Dsoup3=true" ${LAST_ABI_BREAK} $(git rev-parse HEAD)
+
+build-release-tarball:
+  stage: "build"
+  before_script:
+    - dnf update -y --nogpgcheck
+    - dnf install -y --nogpgcheck $DEPENDENCIES $SOUP3_DEPS
+  script:
+    - meson setup "${MESON_BUILD_DIR}"
+    - meson dist -C "${MESON_BUILD_DIR}" --include-subprojects
+  artifacts:
+    name: "${CI_JOB_NAME}-${CI_COMMIT_REF_NAME}"
+    when: "always"
+    paths:
+      - "${TARBALL_ARTIFACT_PATH}"
