--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ variables:
   SOUP3_DEPS: libsoup3-devel
   LAST_ABI_BREAK: 60d135ef64f16671bb0ab4079ecbc59bdc32cbc7
   MESON_BUILD_DIR: "_build"
-  TARBALL_ARTIFACT_PATH: "${MESON_BUILD_DIR}/meson-dist/${CI_PROJECT_NAME}-${CI_COMMIT_TAG}.tar.xz"
+  TARBALL_ARTIFACT_PATH: "${MESON_BUILD_DIR}/meson-dist/${CI_COMMIT_TAG}.tar.xz"
 
 build-stable:
   stage: "build"
